samples/movieapp/without-istio/movieapp/movieapp-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: movieapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: movieapp.inceptio.cn
      http:
        paths:
          - backend:
              serviceName: movieapp
              servicePort: 8080
            path: /
  tls:
    - hosts:
        - movieapp.inceptio.cn
      secretName: wildcard-certs-tls
